solved redismanager error using tokio mutex

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.7.5"
+axum = { version = "0.7.5", features = ["macros"] }
 chrono = "0.4.38"
 dotenvy = "0.15.7"
 lazy_static = "1.5.0"
