--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ name = "cryochange-backend"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "ws"
+path = "src/ws.rs"
+
 [dependencies]
 axum = { version = "0.7.5", features = ["macros"] }
 chrono = "0.4.38"
@@ -16,3 +20,5 @@ sea-orm = { version = "0.12.15", features = ["runtime-tokio-rustls", "sqlx-postg
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.121"
 tokio = { version = "1.39.2", features = ["full"] }
+tokio-tungstenite = "0.23.1"
+futures-util = "0.3.30"
