--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ serde_json = "1.0.121"
 tokio = { version = "1.39.2", features = ["full"] }
 tokio-tungstenite = "0.23.1"
 futures-util = "0.3.30"
+async-recursion = "1.1.1"
